# mini-siem

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: main.py
backend/api/routes/: logs.py  read.py
backend/core/: config.py  logger.py  rules.yaml  rules_config.py  utils.py
backend/db/: database.py  models.py  queries.py
backend/services/: anomaly_detector.py  log_ingestor.py
docs/: architecture.md
ops/: env.sample
scripts/: migrate_db.py  run_analyzer.py  seed_data.py
simulator/: log_generator.py
tests/: conftest.py  test_api_events_r003.py  test_ingest.py  test_rules_sqli.py  test_schema.py
